[project]
name = "agari"
version = "0.1.0"
description = "Open your mouth to scroll or click. Hands-free manga and webtoon reading."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10.14",
    "numpy>=1.24.0",
    "opencv-python>=4.9.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.54",
]

[project.scripts]
agari = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
